Use a single layout for all pages.

--- a/hiring.html
+++ b/hiring.html
@@ -1,5 +1,45 @@
 ---
-layout: hiring
+layout: home
 title: We are hiring
 permalink: /hiring/index.html
 ---
+
+<div class="main" role="main">
+  <div class="primary interior">
+    <div class="row">
+      <div class="small-12 large-9 columns">
+        <h2>We&rsquo;re hiring.</h2>
+        <p>Interested in joining <a href="/our-team/">the team</a>?</p>
+        <p>Ad Hoc LLC is based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 large-9 columns">
+        <h3>Open positions</h3>
+        <h4>Lead Developer</h4>
+        <p>If you have a background in product development, user experience design, or software development, and also love to shape and guide a product from idea to implementation, the Lead Developer position is for you. As a Lead Developer, you will be responsible for directing and influencing product design, development, and architecture. You will work closely with a small team of developers and designers (usually 2-5 people) to plan and prioritize features, and work closely with our public sector clients to understand their needs and involve them in the product development process. If you're technical but also love to direct a product as it grows, this position is for you.</p>
+        <p><a href="https://github.com/adhocteam/adhoc_homework/">Try our code challenges</a> and <a href="mailto:jobs@adhocteam.us">get in touch</a>!</p>
+        <h4>Developer</h4>
+        <p>Are you a software engineer interested in working on problems that potentially impact millions of Americans? We're looking for developers with solid experience in developing web-based applications and systems. We encourage our teams to select the technology that works best for them. One of our projects is a Go app that serves JSON over HTTP; another is a Rails app that makes creating forms simple for non-technical users. We're looking for driven, creative, and passionate engineers who love solving challenging technical problems and want their work to make a difference.</p>
+        <p><a href="https://github.com/adhocteam/adhoc_homework/">Try our code challenges</a> and <a href="mailto:jobs@adhocteam.us">get in touch</a>!</p>
+        <h4>Designer</h4>
+        <p>We are looking for civic-minded designers with great design skills and coding chops to help us solve big problems. Since we focus on small teams, we need for designers who are self-starters. That means we need more than just shiny UI. We need great UX, accessibility and the latest responsive design techniques. We also look for designers that like to get their hands dirty: experience with HTML and CSS are required, and knowledge of one or more typical web frameworks is solid gold.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-12 large-9 columns">
+        <h3>Hiring process</h3>
+        <p>Some insight in to our hiring process, so you know what to expect.</p>
+        <p>
+          <ol>
+            <li>Check out our <a href="https://github.com/adhocteam/adhoc_homework/">code challenges</a>, take a crack at one or all of the problems, and then get in touch with us at <a href="mailto:jobs@adhocteam.us">jobs@adhocteam.us</a> (if you're a designer, for now, send us your resume; we'll have some design challenges soon).</li>
+            <li>We'll review your answers, and be in touch to schedule a quick chat about Ad Hoc LLC, tell you a little bit more about the company and our projects, and answer any questions you might have.</li>
+            <li>If things seem like a good fit, we'll schedule an over-the-phone technical interview with one of our developers.</li>
+            <li>If all goes well, welcome to the team! We'll get you a red cap and a speedo.</li>
+          </ol>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
