--- a/index.html
+++ b/index.html
@@ -1,3 +1,54 @@
 ---
 layout: home
 ---
+
+<div class="main" role="main">
+  <div class="home">
+    <div class="pitch home">
+      <div class="row">
+        <div class="small-12 medium-10 large-6 columns">
+          <h2>Changing the way government does technology.</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <a href="/case-studies/window-shopping/" class="bar">
+    <div class="pitch second">
+      <div class="row">
+        <div class="small-12 medium-4 large-5 columns action-button">
+          <div class="button-wrap">
+            <h3>Healthcare shopping made easy.</h3>
+            <div class="description-wrap">
+              <span>Helping people make sense of their healthcare choices.
+              <svg class="icon icon-circle-right"><use xlink:href="#icon-circle-right"></use></svg>
+            </div>
+            </span>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </a>
+
+  <a href="case-studies/patient-evaluations/" class="bar">
+    <div class="pitch third">
+      <div class="row">
+        <div class="small-12 medium-4 medium-push-7 large-push-7 large-5 columns action-button">
+          <div class="button-wrap">
+            <h3>Helping veterans get their care, faster.</h3>
+            <div class="description-wrap two">
+              <span>Rethinking the veteran’s medical examination.
+                <svg class="icon icon-circle-left"><use xlink:href="#icon-circle-left"></use></svg>
+              </span>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </a>
+  </div>
+</div>
