--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,17 @@
 ---
-layout: thankyou
+layout: home
 title: Thank you
 permalink: /thank-you/index.html
 ---
+
+<div class="main" role="main">
+  <div class="primary interior">
+    <div class="row">
+      <div class="small-12 large-9 columns">
+        <h2><span>Thanks for getting in touch with us.</span></h2>
+        <p>We'll be in touch soon, and look forward to learning more about your project.</p>
+        <p><a href="/">&larr; Home</a></p>
+      </div>
+    </div>
+  </div>
+</div>
