Rename and modify page names.

--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 ---
 layout: home
-title: Our team
-permalink: /our-team/index.html
+title: The Ad Hoc LLC team
+permalink: /team/index.html
 ---
 
 <div class="main" role="main">
