--- a/work-with-us.html
+++ b/work-with-us.html
@@ -1,14 +1,14 @@
 ---
 layout: home
-title: Hire us
-permalink: /hire-us/index.html
+title: Work with Ad Hoc LLC
+permalink: /work-with-us/index.html
 ---
 
 <div class="main" role="main">
   <div class="primary interior">
     <div class="row">
       <div class="small-12 large-9 columns">
-        <h2>Hire us.</h2>
+        <h2>Work with us.</h2>
         <blockquote>
           <p>ad hoc, ˌad ˈhäk/ <i>adjective & adverb</i></p>
           <span>formed, arranged, or done for a particular purpose only.</span>
