--- a/join.html
+++ b/join.html
@@ -1,7 +1,7 @@
 ---
 layout: home
-title: We are hiring
-permalink: /hiring/index.html
+title: Join the Ad Hoc LLC team
+permalink: /join/index.html
 ---
 
 <div class="main" role="main">
@@ -9,7 +9,7 @@ permalink: /hiring/index.html
     <div class="row">
       <div class="small-12 large-9 columns">
         <h2>We&rsquo;re hiring.</h2>
-        <p>Interested in joining <a href="/our-team/">the team</a>?</p>
+        <p>Interested in joining <a href="/team/">the team</a>?</p>
         <p>Ad Hoc LLC is based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
       </div>
     </div>
