--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Changing the way government does technology
     <div class="pitch home">
       <div class="row">
         <div class="small-12 medium-10 large-6 columns">
-          <h2>Changing the way government does technology.</h2>
+          <h2>Changing the way government does technology!</h2>
         </div>
       </div>
     </div>
