--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Changing the way government does technology!
+title: Changing the way government does technology
 ---
 
 <div class="main" role="main">
@@ -14,6 +14,7 @@ title: Changing the way government does technology!
     </div>
   </div>
 </div>
+
 
   <a href="/case-studies/window-shopping/" class="bar">
     <div class="pitch second">
