--- a/pages/join.html
+++ b/pages/join.html
@@ -2,7 +2,9 @@
 layout: home
 title: Join the Ad Hoc LLC team
 permalink: /join/index.html
+published: true
 ---
+
 
 <div class="main" role="main">
   <div class="primary interior">
@@ -10,7 +12,7 @@ permalink: /join/index.html
       <div class="small-12 large-9 columns">
         <h2>We&rsquo;re hiring.</h2>
         <p>Interested in joining <a href="/team/">the team</a>?</p>
-        <p>Ad Hoc LLC is based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
+        <p>Ad Hoc bis based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
       </div>
     </div>
     <div class="row">
