--- a/pages/join.html
+++ b/pages/join.html
@@ -12,7 +12,7 @@ published: true
       <div class="small-12 large-9 columns">
         <h2>We&rsquo;re hiring.</h2>
         <p>Interested in joining <a href="/team/">the team</a>?</p>
-        <p>Ad Hoc bis based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
+        <p>Ad Hoc is based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
       </div>
     </div>
     <div class="row">
