Add details to lead developer job, add anchor tags for in-page linking.

--- a/pages/join.html
+++ b/pages/join.html
@@ -18,13 +18,27 @@ published: true
     <div class="row">
       <div class="small-12 large-9 columns">
         <h3>Open positions</h3>
-        <h4>Lead Developer</h4>
+        <h4><a name="lead-developer">Lead Developer</a></h4>
         <p>If you have a background in product development, user experience design, or software development, and also love to shape and guide a product from idea to implementation, the Lead Developer position is for you. As a Lead Developer, you will be responsible for directing and influencing product design, development, and architecture. You will work closely with a small team of developers and designers (usually 2-5 people) to plan and prioritize features, and work closely with our public sector clients to understand their needs and involve them in the product development process. If you're technical but also love to direct a product as it grows, this position is for you.</p>
+        <p>Basic qualifications:
+          <ul>
+            <li>5+ years of software engineering experience, software architecture, coding, testing and support.</li>
+            <li>5+ years of full-stack web application development experience in any major open source language or framework such as Ruby/Ruby on Rails, Java, Golang, or Python; JavaScript, CSS and HTML.</li>
+            <li>Experience leading a team of developers, and using agile project management tools such as Pivotal Tracker, and version control tools, preferably Git.</li>
+            <li>Experience building secure and scalable cloud environments with Amazon Web Services.</li>
+          </ul>
+        </p>
+        <p>Desired skills:
+          <ul>
+            <li>Consumer-facing web application design and development experience.</li>
+            <li>Experience with web accessibility, Section 508 compliance.</li>
+          </ul>
+        </p>
         <p><a href="https://github.com/adhocteam/adhoc_homework/">Try our code challenges</a> and <a href="mailto:jobs@adhocteam.us">get in touch</a>!</p>
-        <h4>Developer</h4>
+        <h4><a name="developer">Developer</a></h4>
         <p>Are you a software engineer interested in working on problems that potentially impact millions of Americans? We're looking for developers with solid experience in developing web-based applications and systems. We encourage our teams to select the technology that works best for them. One of our projects is a Go app that serves JSON over HTTP; another is a Rails app that makes creating forms simple for non-technical users. We're looking for driven, creative, and passionate engineers who love solving challenging technical problems and want their work to make a difference.</p>
         <p><a href="https://github.com/adhocteam/adhoc_homework/">Try our code challenges</a> and <a href="mailto:jobs@adhocteam.us">get in touch</a>!</p>
-        <h4>Designer</h4>
+        <h4><a name="designer">Designer</a></h4>
         <p>We are looking for civic-minded designers with great design skills and coding chops to help us solve big problems. Since we focus on small teams, we need for designers who are self-starters. That means we need more than just shiny UI. We need great UX, accessibility and the latest responsive design techniques. We also look for designers that like to get their hands dirty: experience with HTML and CSS are required, and knowledge of one or more typical web frameworks is solid gold.</p>
       </div>
     </div>
@@ -41,6 +55,12 @@ published: true
             <li>If all goes well, welcome to the team! We'll get you a red cap and a speedo.</li>
           </ol>
         </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-12 large-9 columns">
+        <p>Ad Hoc LLC is an Equal Opportunity/Affirmative Action Employer. All qualified applicants will receive consideration for employment without regard to race, color, religion, sex, national origin, age, protected veteran status, or disability status.</p>
       </div>
     </div>
   </div>
