--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Changing the way government does technology
+title: Better government software. Services that work, for people.
 ---
 
 <div class="main" role="main">
@@ -8,13 +8,29 @@ title: Changing the way government does technology
     <div class="pitch home">
       <div class="row">
         <div class="small-12 medium-10 large-6 columns">
-          <h2>Changing the way government does technology.</h2>
+          <h2>
+            Better government software. Services that work, for people.
+          </h2>
         </div>
       </div>
     </div>
   </div>
 </div>
 
+<div class="pitch about">
+  <p>
+    Ad Hoc is a small software company that came out of the successful
+    HealthCare.gov rescue effort.
+  </p>
+  <p>
+    We design, build, and operate service-delivering software that's fast,
+    stable, efficient, and usable.
+  </p>
+  <p>
+    <a href="/about/">Find out more about Ad Hoc and start realizing
+      your policy objectives with software that actually works.</a>
+  </p>
+</div>
 
   <a href="/case-studies/window-shopping/" class="bar">
     <div class="pitch second">
