--- a/pages/about.html
+++ b/pages/about.html
@@ -1,14 +1,80 @@
 ---
 layout: home
-title: The Ad Hoc LLC team
-permalink: /team/index.html
+title: About Ad Hoc
+permalink: /about/index.html
 ---
 
 <div class="main" role="main">
   <div class="primary interior">
     <div class="row">
       <div class="small-12 columns">
-        <h2>Our team</h2>
+        <h2>About Ad Hoc</h2>
+        <p>
+          Ad Hoc is a small software engineering company that came out of the
+          successful effort to rescue HealthCare.gov after its disastrous
+          initial launch.
+        </p>
+
+        <p>
+          Ad Hoc is focused on delivering and operating fast, stable, and
+          well-designed software on behalf of U.S. federal and state government
+          that enables policy-makers to provide transactional and informational
+          services to Americans. We do this by bringing people from startups and
+          successful private sector technology companies to these problems,
+          collaborating closely with government partners to deliver software that
+          actually works.
+        </p>
+
+        <h3>The HealthCare.gov rescue</h3>
+        <p>
+          Following the initial launch of HealthCare.gov in 2013, the White
+          House assembled a team of top technology talent from outside of
+          government, to assess what was wrong and come up with a plan to fix
+          it.
+        </p>
+
+        <p>
+          Greg and Paul, Ad Hoc's cofounders and principals, were part of that
+          original group, known as the "ad hoc team", that went in and worked
+          along side those who had built HealthCare.gov. Through their expert
+          leadership and effort, they stablized the site and ensured that
+          millions of Americans were able to get affordable health coverage.
+        </p>
+
+        <p>
+          <a href="./healthcare.gov-rescue.html">Click here for more detail on the rescue of HealthCare.gov</a>.
+        </p>
+
+        <!--
+
+        <h3>Part of the rebel alliance</h3>
+        <p>
+          HealthCare.gov was not a freak occurrance. Technology in the federal
+          government, and especially systems that deliver important services to
+          people, has long-suffered, with most major agency projects failing,
+          either behind schedule, over budget, or simply not working.
+        </p>
+
+        <p>
+          The <a href="https://playbook.cio.gov/">U.S. Digital Services
+          Playbook</a>, and
+          the <a href="https://www.whitehouse.gov/digital/united-states-digital-service">United
+          States Digital Service (U.S.D.S.)</a>, came directly out of the
+          HealthCare.gov rescue, with a goal of institutionalizing what the "ad
+          hoc team" did that worked so successfully.
+        </p>
+
+        <p>
+          Ad Hoc LLC complements the U.S.D.S, along
+          with <a href="https://18f.gsa.gov/">18F</a> and <a href="#">Code for
+          America</a>: all part of a "rebel alliance" that's reforming the way
+          technology is developed and delivered in federal, state, and local
+          government, by infusing the public sector with private sector talent.
+        </p>
+        
+        -->
+
+        <h3>The Ad Hoc team</h3>
           <ul class="team small-block-grid-1 medium-block-grid-2 large-block-grid-4">
             <li class="team-member">
               <div class="about paul">
